@@ -1,4 +1,5 @@
 [CW4]
+* SetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item parameters.
 * Fix a crash when sending DialNumber or UpdateTurnList messages.
 * Show dialog in non-media app: hide and don't send Media Track and Media Clock parameters.
 + Set app icon after app registration (on first OnHMIStatus notification).
